notifcation email & verification account
Notification emails and verification account creation

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -178,7 +178,7 @@ signin.welcome.title = Hello {0},
 signin.welcome.body1 = You are now part of {0} - a friendly Q&A community where you can get answers to your questions.
 signin.welcome.body2 = To get started, simply navigate to the "Ask question" page and ask a question. You can also help people by answering their questions and you will get reputation points.
 signin.welcome.verify = Verify your email here!
-signin.verify.text = Done! Check your email and follow the link to verify it.
+signin.verify.text = Done! Check your email and follow the link or interact with the community straightaway.
 signin.verify.done = Email verified!
 signin.facebook = Continue with Facebook
 signin.google = Continue with Google
@@ -299,7 +299,7 @@ msgcode.5 = You have been signed out.
 msgcode.7 = Something went terribly wrong!
 msgcode.16 = This post was deleted.
 
-about.scoold.1 = Scoold is an open source forum platform for knowledge sharing and collaboration. It was inspired by StackOverflow.com the sites of the Stack Exchange family and we have huge respect towards the people behind them.
+about.scoold.1 = SecuTix community website is based on Scoold. Scoold is an open source forum platform for knowledge sharing and collaboration. It was inspired by StackOverflow.com the sites of the Stack Exchange family and we have huge respect towards the people behind them.
 about.scoold.2 = It's all about:
 about.scoold.3 = learning new stuff,
 about.scoold.4 = sharing knowledge,
