--- a/src/main/resources/lang_fr.properties
+++ b/src/main/resources/lang_fr.properties
@@ -285,7 +285,7 @@ msgcode.5 = Vous avez \u00e9t\u00e9 d\u00e9connect\u00e9.
 msgcode.7 = Quelque chose \u00e0 vraiment mal tourn\u00e9!
 msgcode.16 = Ce post a \u00e9t\u00e9 supprim\u00e9.
 
-about.scoold.1 = Scoold est une plate-forme de forum open source pour le partage des connaissances et la collaboration. Il a \u00e9t\u00e9 inspir\u00e9 par StackOverflow.com les sites de la famille Stack Exchange et nous avons un \u00e9norme respect envers les gens derri\u00e8re eux.
+about.scoold.1 = SecuTix community est bas\u00e9 sur Scoold. Scoold est une plate-forme de forum open source pour le partage des connaissances et la collaboration. Il a \u00e9t\u00e9 inspir\u00e9 par StackOverflow.com les sites de la famille Stack Exchange et nous avons un \u00e9norme respect envers les gens derri\u00e8re eux.
 about.scoold.2 = Tout est dans:
 about.scoold.3 = l'apprentissage de nouvelles choses,
 about.scoold.4 = le partage de connaissance,
