--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -171,13 +171,13 @@ admin.configuration = Configuration
 admin.system = System information
 
 signup.form.email = Email
-signup.form.termsofuse = By signing in, you agree to our 'Terms of use'.
+signup.form.termsofuse = By signing in, you agree to our 'Terms of use' and 'Code of Conduct'.
 
 signin.welcome = Welcome to {0}!
 signin.welcome.title = Hello {0},
 signin.welcome.body1 = You are now part of {0} - a friendly Q&A community where you can get answers to your questions.
 signin.welcome.body2 = To get started, simply navigate to the "Ask question" page and ask a question. You can also help people by answering their questions and you will get reputation points.
-signin.welcome.verify = Verify your email here!
+signin.welcome.verify = 
 signin.verify.text = Done! Check your email and follow the link or interact with the community straightaway.
 signin.verify.done = Email verified!
 signin.facebook = Continue with Facebook
