--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -1,7 +1,7 @@
 home.title = Home
 signin.title = Sign in
 signup.title = Sign up
-about.title = About
+about.title = How it works
 search.title = Search
 profile.title = Profile
 privacy.title = Privacy policy
@@ -106,12 +106,12 @@ freshman = Freshman
 scholar = Scholar
 teacher = Teacher
 professor = Professor
-geek = Geek
+geek = Grand master
 goodquestion = Good Question
 goodanswer = Good Answer
 eureka = Eureka!
 senior = Senior
-noob = Newbie
+noob = Padawan
 disciplined = Disciplined
 polyglot = Polyglot
 timeago = {0} ago
@@ -177,7 +177,7 @@ signin.welcome = Welcome to {0}!
 signin.welcome.title = Hello {0},
 signin.welcome.body1 = You are now part of {0} - a friendly Q&A community where you can get answers to your questions.
 signin.welcome.body2 = To get started, simply navigate to the "Ask question" page and ask a question. You can also help people by answering their questions and you will get reputation points.
-signin.welcome.verify = 
+signin.welcome.verify =
 signin.verify.text = Done! Check your email and follow the link or interact with the community straightaway.
 signin.verify.done = Email verified!
 signin.facebook = Continue with Facebook
