--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -2,7 +2,7 @@ home.title = Home
 signin.title = Sign in
 signup.title = Sign up
 about.title = How it works
-whatsnew = What's new ?
+whatsnew.title = What's new ?
 search.title = Search
 profile.title = Profile
 privacy.title = Privacy policy
