footer with new links

--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -2,7 +2,10 @@ home.title = Home
 signin.title = Sign in
 signup.title = Sign up
 about.title = How it works
-whatsnew.title = What's new ?
+whatsnew.title = What's new in SecuTix
+releaseplanning.title = Release calendar
+customerservice.title = Customer service
+secutixcom.title = Secutix.com
 search.title = Search
 profile.title = Profile
 privacy.title = Privacy policy
