--- a/src/main/resources/lang_en.properties
+++ b/src/main/resources/lang_en.properties
@@ -107,15 +107,15 @@ backintime = Back in Time
 veteran = Veteran
 enthusiast = Enthusiast
 freshman = Freshman
-scholar = Scholar
+scholar = Padawan
 teacher = Teacher
 professor = Professor
-geek = Grand master
+geek = Jedi master
 goodquestion = Good Question
 goodanswer = Good Answer
 eureka = Eureka!
 senior = Senior
-noob = Padawan
+noob = Ewok
 disciplined = Disciplined
 polyglot = Polyglot
 timeago = {0} ago
