Validation step done by community manager in EN/FR/ES/DE

--- a/src/main/resources/lang_de.properties
+++ b/src/main/resources/lang_de.properties
@@ -175,8 +175,8 @@ signin.welcome = Willkommen bei {0}!
 signin.welcome.title = Hallo {0},
 signin.welcome.body1 = Du bist nun Teil von {0} - einer freundlichen Frage- und Antwort-Plattform, wo du Antworten zu deinen Fragen findest.
 signin.welcome.body2 = Um zu starten, navigiere einfach zur Seite "Frage stellen" und stelle eine Frage. Du kannst auch Leuten helfen, indem du ihre Fragen beantwortest und erh\u00e4lst Ansehenspunkte daf\u00fcr.
-signin.welcome.verify = E-Mail hier best\u00e4tigen!
-signin.verify.text = Erledigt! \u00dcberpr\u00fcfe deine E-Mail und folge dem Link, um sie zu best\u00e4tigen.
+signin.welcome.verify =
+signin.verify.text = Please check your mailbox, you will receive a confirmation email once your account is activated.
 signin.verify.done = E-Mail best\u00e4tigt!
 signin.facebook = Weiter mit Facebook
 signin.google = Weiter mit Google
