--- a/src/main/resources/lang_es.properties
+++ b/src/main/resources/lang_es.properties
@@ -175,8 +175,8 @@ signin.welcome = \u00a1Bienvenido a {0}!
 signin.welcome.title = Hola {0},
 signin.welcome.body1 = Ahora eres parte de {0}, una comunidad amigable de preguntas y respuestas donde puedes obtener respuestas a tus preguntas.
 signin.welcome.body2 = Para comenzar, simplemente vaya a la p\u00e1gina "Preguntar" y haga una pregunta. Tambi\u00e9n puede ayudar a las personas respondiendo sus preguntas y obtendr\u00e1 puntos de reputaci\u00f3n.
-signin.welcome.verify = \u00a1Verifica tu correo electr\u00f3nico aqu\u00ed!
-signin.verify.text = \u00a1Hecho! Revisa tu correo electr\u00f3nico y sigue el enlace para verificarlo.
+signin.welcome.verify =
+signin.verify.text = Please check your mailbox, you will receive a confirmation email once your account is activated.
 signin.verify.done = \u00a1Correo electr\u00f3nico verificado!
 signin.facebook = Continuar con Facebook
 signin.google = Continuar con Google
