--- a/src/main/resources/lang_fr.properties
+++ b/src/main/resources/lang_fr.properties
@@ -171,8 +171,8 @@ signin.welcome = Bienvenue sur {0}!
 signin.welcome.title = Bonjour {0},
 signin.welcome.body1 = Vous faites maintenant partie de {0} - une communaut\u00e9 Q & R conviviale o\u00f9 vous pouvez obtenir des r\u00e9ponses \u00e0 vos questions.
 signin.welcome.body2 = Pour commencer, acc\u00e9dez simplement \u00e0 la page "Poser une question" et posez une question. Vous pouvez \u00e9galement aider les gens en r\u00e9pondant \u00e0 leurs questions et vous obtiendrez des points de r\u00e9putation.
-signin.welcome.verify = V\u00e9rifier votre email ici!
-signin.verify.text = Termin\u00e9! V\u00e9rifier votre bo\u00eete email et suivez le lien pour le v\u00e9rifier.
+signin.welcome.verify =
+signin.verify.text = Veuillez v\u00e9rifier votre boîte mail, vous recevrez un email de confirmation une fois votre compte activ\u00e9
 signin.verify.done = Email v\u00e9rifi\u00e9!
 signin.facebook = Continuer avec Facebook
 signin.google = Continuer avec Google
